--- a/.github/workflows/kernel-only-one.yml
+++ b/.github/workflows/kernel-only-one.yml
@@ -70,6 +70,4 @@ jobs:
 
       - name: "Logs: ${{ steps.kernel.outputs.logs_url }}"
         run: |
-          echo "Logs:"
-          echo "${{ steps.kernel.outputs.logs_url }}"
-          echo "Done."
+          echo "Logs: ${{ steps.kernel.outputs.logs_url }}"
