--- a/.github/workflows/artifact-image-complete-matrix.yml
+++ b/.github/workflows/artifact-image-complete-matrix.yml
@@ -2754,7 +2754,8 @@ jobs:
         run: |
           set -x
           export REPREPRO_INFO_DIR="$(pwd)/output/info/reprepro"
-          if False; then
+          # rpardini is an absolute idiot, and chose "[" (bracket) as the delimiter jinja template, so now has to escape it (raw/endraw). Imbecile.
+          if [[ "${{ github.event.inputs.nightly || 'yes' }}" == "yes" ]]; then
             export INCOMING_DEBS_DIR="$(pwd)/output/debs-beta"
           else
             export INCOMING_DEBS_DIR="$(pwd)/output/debs"
